--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -133,7 +133,7 @@ In this example, there is a species-specific expansion (i.e., Okinawa) at the sa
 
 In the following plots, I summarize some of the features of the `orthoflags` object.
 
-```{r summarizing_orthoflags_3}
+```{r summarizing_orthoflags_3, fig.height=4, fig.width=6, dev=c("svg", "png")}
 # Take a look at the distribution of different species flags. 
 ggplot(orthoflags) +
   aes(x=reorder(unlist(expansion_reconciled), unlist(expansion_reconciled), function(x) length(x))) + geom_bar(stat="count", position="dodge") +
@@ -228,7 +228,7 @@ transcripts <- sapply(names(transcripts), function(sp){
 Prepare GBreak objects
 ======================
 
-```{r Bar_Osk}
+```{r creating_gbreaks}
 orthoPairToGBreaks <- function(name1, name2, annot1, annot2, treeName="N19") {
   orthoPairs <- OikScrambling:::load_one_to_ones(
     system.file(paste0("extdata/OrthoFinder/",treeName,".tsv"), package = "BreakpointsData"),
@@ -295,7 +295,7 @@ sapply(orthoPairs, length)
 Problem: some annotations overlap
 ---------------------------------
 
-```{r fix_Bar_Osk}
+```{r fix_gbreaks}
 transcripts$Bar |> length()
 transcripts$Bar |> reduce(min = 0) |> length()
 
@@ -322,14 +322,14 @@ orthoPairsFiltered <- sapply(orthoPairs, function(gb) {
   gb
 }) |> SimpleList()
 
-orthoPairsFiltered_core <- sapply(orthoPairs_core, function(gb) {
-  gb <- gb[!flagOverlaps(gb)]
-  gb <- gb[!flagOverlaps(gb$query)]
-  gb
-}) |> SimpleList()
+# orthoPairsFiltered_core <- sapply(orthoPairs_core, function(gb) {
+#   gb <- gb[!flagOverlaps(gb)]
+#   gb <- gb[!flagOverlaps(gb$query)]
+#   gb
+# }) |> SimpleList()
 
 sapply(orthoPairs, length) - sapply(orthoPairsFiltered, length)
-sapply(orthoPairs_core, length) - sapply(orthoPairsFiltered_core, length)
+#sapply(orthoPairs_core, length) - sapply(orthoPairsFiltered_core, length)
 ```
 
 Exploring patterns in the pairwise objects
@@ -376,11 +376,11 @@ orthoBlocks[ 1:5 ] <- sapply(orthoBlocks[ 1:5 ],  flagLongShort, longShort$Oki)
 orthoBlocks[ 6:10] <- sapply(orthoBlocks[ 6:10],  flagLongShort, longShort$Osa)
 orthoBlocks[11:15] <- sapply(orthoBlocks[11:15],  flagLongShort, longShort$Bar)
 
-orthoBlocks_core <- sapply(orthoPairsFiltered_core[1:15], coalOrtho) |> SimpleList()
-#orthoBlocks_core$Ply_Ros <- coalesce_contigs(orthoPairsFiltered_core$Ply_Ros)
-orthoBlocks_core[ 1:5 ] <- sapply(orthoBlocks_core[ 1:5 ],  flagLongShort, longShort$Oki)
-orthoBlocks_core[ 6:10] <- sapply(orthoBlocks_core[ 6:10],  flagLongShort, longShort$Osa)
-orthoBlocks_core[11:15] <- sapply(orthoBlocks_core[11:15],  flagLongShort, longShort$Bar)
+# orthoBlocks_core <- sapply(orthoPairsFiltered_core[1:15], coalOrtho) |> SimpleList()
+# orthoBlocks_core$Ply_Ros <- coalesce_contigs(orthoPairsFiltered_core$Ply_Ros)
+# orthoBlocks_core[ 1:5 ] <- sapply(orthoBlocks_core[ 1:5 ],  flagLongShort, longShort$Oki)
+# orthoBlocks_core[ 6:10] <- sapply(orthoBlocks_core[ 6:10],  flagLongShort, longShort$Osa)
+# orthoBlocks_core[11:15] <- sapply(orthoBlocks_core[11:15],  flagLongShort, longShort$Bar)
 
 sapply(orthoBlocks, length)
 sapply(orthoBlocks_core, length)
@@ -783,39 +783,124 @@ big_chr <- c("chr1","chr2","PAR","XSR","YSR")
 # Given a chromosome-scale assembly (sp1) and a second species of a clade (sp2),
 # plot coordinates of clade-specific gene expansions (common to sp1+sp2) and
 # species-specific expansions.
-collect_clade_expansions <- function(orthopairs, sp1, sp2, big_chr) {
+collect_clade_expansions <- function(orthopairs, sp1, sp2, bigChr, longShort) {
   result <- SimpleList()
   orthopair <- orthopairs[[paste(sp1, sp2, sep="_")]]
-  orthopair$midpoints <- grMidpoint(orthopair)
+  orthopair$midpoint <- grMidpoint(orthopair)
   orthopair <- as.data.frame(orthopair)
-  df <- subset(orthopair, orthopair$seqnames %in% big_chr)
+  orthopair <- subset(orthopair, orthopair$seqnames %in% big_chr)
   # Identify clade-specific expansions
-  dat_clade <- df[as.logical(unlist(lapply(df$orthoFlagDF, function(x) x[[paste("expansion_clade_", sp1, "_", sp2, sep="")]] )))==TRUE,] |> as.data.frame()
+  dat_clade <- orthopair[as.logical(unlist(lapply(orthopair$orthoFlagDF, function(x) x[[paste("expansion_clade_", sp1, "_", sp2, sep="")]] )))==TRUE,] |> as.data.frame()
   result[[paste(sp1, sp2, sep="_")]] <- dat_clade
   # Obtain species-specific expansions for both species
   # sp1 must be a chromosomal assembly - and getting its gene coordinates relative to the
-  # sp1 assembly is therefore really easy
+  # sp1 assembly is therefore really easy.
   df_sp1 <- as.data.frame(transcripts[[sp1]])
-  df_sp1 <- subset(df_sp1, df_sp1$seqnames %in% big_chr)
-  dat_sp1 <- df_sp1[which(unlist(lapply(df_sp1$orthoFlagDF, function(x) x$expansion_species_specific ))==sp1),]
+  df_sp1$midpoint <- grMidpoint(transcripts[[sp1]])
+  df_sp1 <- subset(df_sp1, df_sp1$seqnames %in% big_chr) # Subset to only chromosome-scale scaffolds
+  df_sp1 <- df_sp1[which(unlist(lapply(df_sp1$orthoFlagDF, function(x) x$expansion_species_specific ))==sp1),] # Subset to species-specific expansions
+  dat_sp1 <- flagLongShort(GRanges(df_sp1), longShort) |> as.data.frame()
   result[[sp1]] <- dat_sp1
-  # TODO
+
   # sp2 is trickier.
   # Its species-specific expansions cannot be part of the orthoPairs, by definition.
   # So what you can do is guess where that transcript corresponds to on the reference
   # genome based on its transcript coordinates, but this is tricky...
-  df_sp2 <- as.data.frame(transcripts[[sp2]])
+  transcripts_sp2 <- as.data.frame(transcripts[[sp2]])
+  transcripts_sp2$midpoint <- grMidpoint(transcripts[[sp2]])
+  # Subset transcripts to only the longest per gene...
+  transcripts_sp2$geneid <- unname(sapply(transcripts_sp2$tx_name, function(s) unlist(strsplit(s, "\\.t"))[1] ))
+  # Split by geneID, select the largest transcript, then glue back together
+  transcripts_sp2 <- split(transcripts_sp2, transcripts_sp2$geneid)
+  transcripts_sp2 <- lapply(transcripts_sp2, function(geneid) {
+    biggest_gene = geneid[which.max(geneid$width),]
+    biggest_gene
+  })
+  transcripts_sp2 <- do.call(rbind, transcripts_sp2) |> as.data.frame()
+  transcripts_sp2 <- transcripts_sp2[order(transcripts_sp2$seqnames, transcripts_sp2$start),]
+  df_sp2 <- subset(transcripts_sp2, transcripts_sp2$seqnames %in% unique(unlist(orthopair$query.seqnames))) # Subset to only contigs that can be found within chr-scale scaffolds
+  df_sp2 <- df_sp2[which(unlist(lapply(df_sp2$orthoFlagDF, function(x) x$expansion_species_specific ))==sp2),] # Subset to species-specific expansions
+
+  # Now is where things get, uh, gross.
+  # 1. Look for the genes immediately previous and next to every species-specific gene in sp2.
+  # 2. If previous and next on same contig, then the position of the species-specific gene can be guesstimated
+  #    relative to the reference genome.
+  # 3. Look for previous and next gene within orthopairs. If both within orthopairs, then the position of
+  #    the species-specific expanded gene is inferred to be between the start/end of the reference genome.
+  df_sp2_specific <- lapply(1:nrow(df_sp2), function(gene){
+    cur_gene <- df_sp2[gene,]
+    prev_gene <- transcripts_sp2[which(transcripts_sp2$tx_name == cur_gene$tx_name)-1,]
+    next_gene <- transcripts_sp2[which(transcripts_sp2$tx_name == cur_gene$tx_name)+1,]
+    if(nrow(prev_gene)!=0 & nrow(next_gene)!=0) {
+      contig_names <- c(as.character(cur_gene$seqnames), as.character(prev_gene$seqnames),  as.character(next_gene$seqnames))
+      # If all genes on same contig...
+      if(length(unique(contig_names)) == 1) { 
+        # If previous and next genes in an orthopair...
+        if(prev_gene$tx_name %in% orthopair$query.tx_name & next_gene$tx_name %in% orthopair$query.tx_name){
+          # Return a new orthopair that does NOT exist in sp1 query genome.
+          # The range is somewhere between the start and end sites of the surrounding genes.
+          prev_orthopair <- orthopair[orthopair$query.tx_name == prev_gene$tx_name,]
+          next_orthopair <- orthopair[orthopair$query.tx_name == next_gene$tx_name,]
+          mod_orthopair <- prev_orthopair
+          mod_orthopair$start   <- prev_orthopair$end+1
+          mod_orthopair$end     <- next_orthopair$start-1
+          mod_orthopair$width   <- next_orthopair$start - prev_orthopair$end
+          mod_orthopair$tx_id   <- NA # A gene specific to sp2 cannot have a tx_id in the reference.
+          mod_orthopair$tx_name <- NA
+          mod_orthopair$dNdS_GUIDANCE2  <- NA # A species-specific gene cannot have a dN/dS value, because
+          mod_orthopair$dNdS_HmmCleaner <- NA # they are only computed on one-to-one genes.
+          mod_orthopair$dNdS_PRANK      <- NA
+          mod_orthopair$orthoFlagDF <- cur_gene$orthoFlagDF
+          mod_orthopair$query.start <- cur_gene$start
+          mod_orthopair$query.end   <- cur_gene$end
+          mod_orthopair$query.width <- cur_gene$end - cur_gene$start
+          mod_orthopair$query.tx_id <- cur_gene$tx_id
+          mod_orthopair$query.dNdS_GUIDANCE2  <- NA # A species-specific gene cannot have a dN/dS value, because
+          mod_orthopair$query.dNdS_HmmCleaner <- NA # they are only computed on one-to-one genes.
+          mod_orthopair$query.dNdS_PRANK      <- NA
+          mod_orthopair$orthoFlagDF       <- cur_gene$orthoFlagDF # I make both orthoFlagDFs the same for convenience.
+          mod_orthopair$query.orthoFlagDF <- cur_gene$orthoFlagDF
+          mod_orthopair$midpoint <- cur_gene$midpoint
+          rownames(mod_orthopair) <- NULL
+          return(mod_orthopair)
+        } else {
+          warning_message = paste("sp2-specific gene ", cur_gene$tx_name, "'s next gene ", next_gene$tx_name, " and previous gene ", prev_gene$tx_name, " are not in orthopairs. Can't infer position of a species-specific gene unless it can be placed on the reference genome.", sep="")
+          warning(warning_message)
+          return(NULL)
+        }
+      } else {
+        warning_message = paste("sp2-specific gene ", cur_gene$tx_name, "'s next gene ", next_gene$tx_name, " and previous gene ", prev_gene$tx_name, " are not on the same contig. Contig names: ", paste(contig_names, collapse=","), "\n Can't infer position of a species-specific gene unless neighbouring genes are on same contig.",  sep="")
+        warning(warning_message)
+        return(NULL)
+      }
+    } else {
+      return(NULL)
+    }
+  })
+  dat_sp2 <- do.call(rbind, df_sp2_specific) |> as.data.frame()
   
+  result[[sp2]] <- dat_sp2
+  # bind rows
   result
 }
-dat <- collect_clade_expansions(orthopairs=orthoPairs, sp1="Oki", sp2="Kum", big_chr=big_chr)
+dat <- collect_clade_expansions(orthopairs=orthoPairs, sp1="Oki", sp2="Kum", bigChr=big_chr, longShort=longShort$Oki)
 ```
-```
-ggplot(dat) +
-  aes(x=midpoints) +
+```{r hello2}
+ggplot(dat$Oki_Kum) +
+  aes(x=midpoint) +
   #geom_density() + 
   geom_histogram(binwidth=500000) +
-  facet_wrap(seqnames~Arm, scales = "free_x", ncol=2)
+  facet_wrap(seqnames~Arm, scales = "free_x", ncol=2) +
+  ggtitle('Gene family expansions: Oki-Kum')
+
+
+ggplot(dat$Oki) +
+  aes(x=midpoint) +
+  #geom_density() + 
+  geom_histogram(binwidth=100000) +
+  #geom_boxplot() +
+  facet_wrap(seqnames~Arm, scales = "free_x", ncol=2) +
+  ggtitle('Gene family expansions: Oki-specific')
 
 ```
 
